Cascading style sheet means add changes and not correct what is already changed
Fixed discord chat bar shitty update
(and pushed lot of quickCSS I had for betterFolder and buttons misaligned)

--- a/NewerOldCord.css
+++ b/NewerOldCord.css
@@ -364,3 +364,71 @@ body {
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
 }
+
+
+
+
+/*Cascading style sheet means add changes and not correct what is already changed*/
+/* hides left sidebar when fullscreen mode */
+
+.base_c48ade[data-fullscreen="true"].vc-betterFolders-sidebar-grid {
+	grid-template-columns: [start] 0 [guilds-end] 0 [betterFoldersSidebar-end] 0 [channelsEnd] 100% [end] !important;
+	grid-template-rows: [top] 0 [titleBarEnd] 100% [end] !important;
+}
+.inner_c0bea0 {
+    background-color: #2d2e31;
+}
+.winButtons_c38106 {
+	left: 25px;
+}
+
+.toolbar__9293f{
+	padding-right: 17px !important;
+}
+
+.vc-toolbox-btn .vc-toolbox-icon{
+	padding-top: 4px !important;
+	width: 30px;
+	height: 30px;
+}
+
+.clickable_c99c29{
+	padding-top: 8px;
+	left: 8px;
+}
+
+.folderIcon__48112:hover{
+	background-color: unset !important;
+}
+
+.channelTextArea__74017 {
+
+
+	border: 1px solid var(--border-faint) !important;
+    border-radius: var(--radius-sm) !important;
+	margin-bottom: 20px;
+}
+.attachButton__0923f {
+	height: 20px;
+	padding: unset !important;
+	margin-top: -1px;
+}
+
+.typing_b88801{
+	margin-top: -1px;
+}
+
+.messagesWrapper__36d07{
+	margin-bottom: 14px;
+}
+
+
+
+#app-mount > div.appAsidePanelWrapper_a3002d > div > div.app_a3002d > div > div.layers__960e4.layers__160d8 > div > div > div > div.content_c48ade > div.page_c48ade > div > div > div.content_f75fb0 > main > form > div > div > div > div > div.attachWrapper__0923f > div > div > svg > path{
+d: path("M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M21,16h-5v5 c0,0.553-0.448,1-1,1s-1-0.447-1-1v-5H9c-0.552,0-1-0.447-1-1s0.448-1,1-1h5V9c0-0.553,0.448-1,1-1s1,0.447,1,1v5h5 c0.552,0,1,0.447,1,1S21.552,16,21,16z");
+
+transform: scale(1.1);
+transform: translate(-2px, -2px);
+}
+
+
